Fix jump so that player can only jump when on platform

--- a/css/index.scss
+++ b/css/index.scss
@@ -5,3 +5,10 @@
   margin-right: auto;
   display: block;
 }
+
+.photo {
+  position: fixed;
+  z-index: -1;
+  padding-left: 4em;
+  width: 80%
+}
